k8s deployment/k8s/go-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go
  name: go
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    app: go
