k8s deployment/k8s/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: react
  name: react
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: react
