k8s deployment/k8s/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring
  name: spring
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: spring
