k8s deployment/k8s/deployment-isolated-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deployment-isolated-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              deployment-isolated-network: "true"
  podSelector:
    matchLabels:
      deployment-isolated-network: "true"
